# agp

./: .gitignore  Cargo.toml  Makefile.toml  README.md  svgo.config.mjs
benches/: measurements.rs  meme_benchmark.rs
meme_derive/: Cargo.toml
meme_derive/src/: lib.rs
paper/: clean.ps1  make_figs.ps1  paper.tex
paper/assets/cheatsheets/: style.nomnoml
paper/scripts/: clean.ps1  make_figs.ps1
paper/src/: paper.tex
paper/src/codes/: minimal_sys.rs
paper/src/figures/: basic_mem.ditaa  meme_structure.ditaa  minimal_sys.ditaa  obj.nomnoml  process.nomnoml  rule_mem.nomnoml  sys_arch.ditaa  top_arch.ditaa
src/: core.rs  errors.rs  gpu.rs  helpers.rs  lib.rs  lib_info.rs  mems.rs  objs.rs  rules.rs
src/core/: mod.rs
src/errors/: mod.rs
src/lib_info/: mod.rs
src/mems/: base_mem.rs  basic.rs
src/objs/: base_objs.rs  com.rs  mod.rs
src/rules/: com.rs  persist.rs
tests/: all.rs  integration_test.rs
tests/mems/: mod.rs  test_mem.rs
tests/misc/: mod.rs
tests/objs/: mod.rs
tests/rules/: mod.rs
