[package]
name = "meme"
authors = ["Junshuang Hu <hjshuang@hnu.edu.cn>"]
version = "0.1.0"
edition = "2021"
license = "unset"
description = "Membrane computing system emulator"
readme = "README.md"
homepage = "unset"
repository = "unset"
keywords = ["Membrane computing", "P system", "Biocomputing"]
categories = ["libraries"]

[dependencies]
crossbeam-channel = "0.5"
meme_derive = { path = "./meme_derive" }
log = "0.4"
once_cell = "1.19"
krnl = "0.1"
rand = "0.8"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


